# labmds

./: .gitignore  L10_Cerinte.txt  L11_Cerinte.txt  L12_Cerinte.txt  L13_Cerinte.txt  L1_Cerinte.txt  L2_Cerinte.txt  L3_Cerinte.txt  L4_Cerinte.txt  L5_Cerinte.txt  L6_Cerinte.txt  L7_Cerinte.txt  L8_Cerinte.txt  L9_Cerinte.txt  opencode.json  opencode.jsonc
.github/workflows/: ci.yml  deploy.yml
L1/: .gitignore  SPEC.md  main.py  todo.py
L10/: main.dfy
L11/: clock.fizz  scheduler.fizz  traffic.fizz
L12/: archive.json  cli.py
L12/openspec/changes/implement-delete/specs/: delete.md
L13/: weather_server.py
L2/: Dockerfile  Dockerfile.opencode  README.md  main.py
L3/: demo.py  manage.py
L3/catalog/: settings.py  urls.py  wsgi.py
L3/courses/: models.py  urls.py  views.py
L3/courses/migrations/: 0001_initial.py
L3/courses/templates/courses/: course_confirm_delete.html  course_form.html  course_list.html
L4/: chunking.py  intervals.py  test_chunking.py  test_intervals.py  test_utils.py  utils.py
L5/: agent.py
L6/: ex1.py  ex2.c  ex2b.cpp  ex3.c  ex4.cpp  ex5.cpp
L7/: atomic  atomic.c  hash.c  hash_generic.c  race  race.c  sleep.c
L8/: build.py  calc.py  data.json  test_build.py  test_calc.py
L8/site/: index.html
L9/: .gitignore  EX1_ANSWERS.md  README.md  pyproject.toml
L9/rssmds/: cli.py  config.py  db.py  discovery.py  fetcher.py  formatting.py  parser.py  web.py
L9/tests/: test_cli.py  test_db.py  test_discovery.py  test_formatting.py  test_parser.py  test_web.py
